# assistant

./: .gitignore  Cargo.toml  README.md  settings.cpt
.cargo/: config
src/: chat.rs  circular_buffer.rs  main.rs
