[package]
name = "assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.8.4"
serde = "1.0.164"
serde_json = "1.0.96"
anyhow = "1.0.71"
reqwest = { version = "0.11.18", features = [ "json" ] }
tokio = { version = "1", features = [ "full" ] }

cpal = "0.15.2"
hound = "3.5.0"
rodio = { version = "0.17.1", default-features = false, features = [ "wav" ] }

rustpotter = "2.0.0"
webrtc-vad = "0.4.0"
whisper-rs = { path = "../whisper-rs" }
